# htd

./: .air.toml  .gitignore  .sqllsrc.json  Dockerfile  Makefile  foo.db  foo.db-journal  go.mod  go.sum  gochangelog.config.yaml  store.db  tailwind.config.js
cmd/htd/: main.go
pkg/auth/: auth.go
pkg/router/: browserevent.go  cors.go  csrf.go  fileserver.go  gzip.go  handler.go  method.go  middleware.go  newrouter.go  page.go  refresh_event.go  route.go  router.go  typescript.go
pkg/store/: api.go  image.go  product.go  store.go
sql/: create_table.sql
src/types/: declarations.go
static/: output.css  style.css
static/editor/: Container.js  HTMLTextEditElement.js  HTMLTextEditMenu.js  HTMLTextEditorElement.js  HtdElement.js  HtdTextEdit.js  caller.js  command.js  index.js  randhash.js
static/src/: CMakeLists.txt  main.cpp
static/src/drivers/: CMakeLists.txt  button.cpp  button.hpp  eeprom.cpp  eeprom.hpp  i420ma.cpp  i420ma.hpp  power.cpp  power.hpp  socket.c  socket.h
views/: base.layout.templ  base.layout_templ.go  base.layout_templ.txt  button.html  index.html  input.html  login.html  login.page.templ  login.page_templ.go  reload.script.templ  reload.script_templ.go  tester.html
views/components/: data.component.templ  product-create.component.templ  spinner.component.templ  spinner.component_templ.go
views/icons/: arrow-left-circle.icon.templ  beaker.icon.templ  bell.icon.templ  chart-bar.icon.templ  chart-pie.icon.templ  check-circle.icon.templ  clipboard-document.icon.templ  cog.icon.templ  swan.icon.templ  (+9 more)
web/: package-lock.json  package.json
(+38 files in other folders)
